SubBt/force-app/main/default/objects/Budget__c/fields/Approved_CO__c.field-meta.xml
<CustomField>
    <fullName>Approved_CO__c</fullName>
    <description>Sum of all approved CO</description>
    <inlineHelpText>Rollup of Approved Change Orders.</inlineHelpText>
    <label>Approved CO&apos;s</label>
    <summarizedField>Budget_Item__c.Approved_CO__c</summarizedField>
    <summaryForeignKey>Budget_Item__c.Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>