SubBt/force-app/main/default/objects/Budget__c/fields/Approved_CO_Amount__c.field-meta.xml
<CustomField>
    <fullName>Approved_CO_Amount__c</fullName>
    <label>Customer Approved CO Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>