SubBt/force-app/main/default/objects/Budget__c/fields/Billings_In_Excess_of_Costs__c.field-meta.xml
<CustomField>
    <fullName>Billings_In_Excess_of_Costs__c</fullName>
    <formula>IF( Revenue_Earned_To_Date__c &lt;  Invoice_To_Date__c , 
(Revenue_Earned_To_Date__c-Invoice_To_Date__c),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Work that has been completed but not billed.</inlineHelpText>
    <label>Billings In Excess of Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>