SubBt/force-app/main/default/objects/Budget__c/fields/Bought_Out__c.field-meta.xml
<CustomField>
    <fullName>Bought_Out__c</fullName>
    <formula>Committed_Costs__c/ Original_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Approved PO&apos;s divided by revised budget number.  This metric tells you the percentage spent against the revised budget.</inlineHelpText>
    <label>% Bought Out</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>