SubBt/force-app/main/default/objects/Budget__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <description>This is system generated auto number field</description>
    <displayFormat>B-{00000}</displayFormat>
    <inlineHelpText>This is system generated auto number field</inlineHelpText>
    <label>Budget #</label>
    <type>AutoNumber</type>
</CustomField>