SubBt/force-app/main/default/objects/Budget__c/fields/Budget_Cost_To_Complete__c.field-meta.xml
<CustomField>
    <fullName>Budget_Cost_To_Complete__c</fullName>
    <description>buildertek__Forecast_To_Complete__c - buildertek__Committed_Costs__c</description>
    <formula>Forecast_To_Complete__c -  Committed_Costs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Forecast To Complete - Approved PO&apos;s.</inlineHelpText>
    <label>Budget Cost To Complete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>