SubBt/force-app/main/default/objects/Budget__c/fields/Budget_Number__c.field-meta.xml
<CustomField>
    <fullName>Budget_Number__c</fullName>
    <formula>Project__r.Auto_Number__c &amp;&apos;-&apos;&amp;  Auto_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget #</label>
    <type>Text</type>
</CustomField>