SubBt/force-app/main/default/objects/Budget__c/fields/Committed_Costs__c.field-meta.xml
<CustomField>
    <fullName>Committed_Costs__c</fullName>
    <description>Committed Costs = Sum of “Approved ” Purchase Orders</description>
    <inlineHelpText>Committed Costs = Sum of “Approved ” Purchase Orders</inlineHelpText>
    <label>Committed Costs</label>
    <summarizedField>Budget_Item__c.Committed_Costs__c</summarizedField>
    <summaryForeignKey>Budget_Item__c.Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>