SubBt/force-app/main/default/objects/Budget__c/fields/Completion_Percent_Budget__c.field-meta.xml
<CustomField>
    <fullName>Completion_Percent_Budget__c</fullName>
    <formula>/*buildertek__Committed_Costs__c /  IF(buildertek__Forecast_To_Complete__c = 0, 0, buildertek__Forecast_To_Complete__c)*/

Committed_Costs__c /  Original_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Committed Costs divided by Original Budget.</inlineHelpText>
    <label>Budget Completion %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>