SubBt/force-app/main/default/objects/Budget__c/fields/Cost_In_Excess_of_Billings__c.field-meta.xml
<CustomField>
    <fullName>Cost_In_Excess_of_Billings__c</fullName>
    <formula>IF( Revenue_Earned_To_Date__c &gt;  Invoice_To_Date__c , 
(Revenue_Earned_To_Date__c-Invoice_To_Date__c),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Costs that have been paid and not received from the customer.</inlineHelpText>
    <label>Cost In Excess of Billings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>