SubBt/force-app/main/default/objects/Budget__c/fields/Current_Contract_Amount__c.field-meta.xml
<CustomField>
    <fullName>Current_Contract_Amount__c</fullName>
    <label>Current Contract Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>