SubBt/force-app/main/default/objects/Budget__c/fields/Direct_Costs__c.field-meta.xml
<CustomField>
    <fullName>Direct_Costs__c</fullName>
    <description>Direct Costs - Sum of all Expenses and Invoices not tied to a Commitment.</description>
    <inlineHelpText>Direct Costs - Sum of all Expenses and Invoices not tied to a Commitment.</inlineHelpText>
    <label>Direct Costs</label>
    <summarizedField>Budget_Item__c.Direct_Costs__c</summarizedField>
    <summaryForeignKey>Budget_Item__c.Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>