SubBt/force-app/main/default/objects/Budget__c/fields/Doc_Template__c.field-meta.xml
<CustomField>
    <fullName>Doc_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Doc Template</label>
    <referenceTo>Quote_Template__c</referenceTo>
    <relationshipLabel>Budgets</relationshipLabel>
    <relationshipName>Budgets</relationshipName>
    <type>Lookup</type>
</CustomField>