SubBt/force-app/main/default/objects/Budget__c/fields/Estimated_Cost_To_Complete__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Cost_To_Complete__c</fullName>
    <inlineHelpText>Total Costs + Forecasted To Complete</inlineHelpText>
    <label>Est. Cost To Complete</label>
    <summarizedField>Budget_Item__c.Estimated_Cost_To_Complete__c</summarizedField>
    <summaryForeignKey>Budget_Item__c.Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>