SubBt/force-app/main/default/objects/Budget__c/fields/Estimated_Gross_Profit__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Gross_Profit__c</fullName>
    <description>Sales Price - Total Costs</description>
    <formula>/*buildertek__Revised_Budget__c -  buildertek__Forecast_To_Complete__c*/

 Sales_Price__c -  Total_Costs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sales Price - Total Costs</inlineHelpText>
    <label>Gross Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>