SubBt/force-app/main/default/objects/Budget__c/fields/Estimated_Gross_Profit_Percent__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Gross_Profit_Percent__c</fullName>
    <description>buildertek__Estimated_Gross_Profit__c / buildertek__Revised_Budget__c</description>
    <formula>/*buildertek__Estimated_Gross_Profit__c /   IF(buildertek__Revised_Budget__c = 0, 1, buildertek__Revised_Budget__c)*/

(Estimated_Gross_Profit__c /   IF( Sales_Price__c  = 0, 1,  Sales_Price__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Gross Profit/Revised Budget</inlineHelpText>
    <label>Estimated Gross Profit Margin (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>