SubBt/force-app/main/default/objects/Budget__c/fields/Forecast_To_Complete__c.field-meta.xml
<CustomField>
    <fullName>Forecast_To_Complete__c</fullName>
    <inlineHelpText>Rollup of the Forecast To Complete (Manual Entry) from Budget Lines.</inlineHelpText>
    <label>Forecast To Complete</label>
    <summarizedField>Budget_Item__c.Forecast_To_Complete__c</summarizedField>
    <summaryForeignKey>Budget_Item__c.Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>