SubBt/force-app/main/default/objects/Budget__c/fields/Gross_Profit__c.field-meta.xml
<CustomField>
    <fullName>Gross_Profit__c</fullName>
    <formula>/* BC 12/17/22: (buildertek__Profit_Loss__c / buildertek__Total_Costs__c  )*-1 */
( Estimated_Gross_Profit__c  /  Sales_Price__c   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Gross Profit / Sales Price</inlineHelpText>
    <label>Gross Profit Margin (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>