SubBt/force-app/main/default/objects/Budget__c/fields/Invoice_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_To_Date__c</fullName>
    <label>Invoice To Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>