SubBt/force-app/main/default/objects/Budget__c/fields/Locked__c.field-meta.xml
<CustomField>
    <fullName>Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When this budget is locked  you cannot add new items.</inlineHelpText>
    <label>Locked</label>
    <type>Checkbox</type>
</CustomField>