SubBt/force-app/main/default/objects/Budget__c/fields/Net_Sales__c.field-meta.xml
<CustomField>
    <fullName>Net_Sales__c</fullName>
    <formula>( Total_Costs__c /  Sales_Price__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Costs / Sales Price</inlineHelpText>
    <label>Net Sales (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>