SubBt/force-app/main/default/objects/Budget__c/fields/Original_Budget__c.field-meta.xml
<CustomField>
    <fullName>Original_Budget__c</fullName>
    <description>This is Original Budget (Quantity * Unit Price)</description>
    <inlineHelpText>This is Original Budget (Quantity * Unit Price)</inlineHelpText>
    <label>Original Budget</label>
    <summarizedField>Budget_Item__c.Original_Budget__c</summarizedField>
    <summaryForeignKey>Budget_Item__c.Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>