SubBt/force-app/main/default/objects/Budget__c/fields/Paid_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Paid_To_Date__c</fullName>
    <inlineHelpText>Amount of Purchase Orders you have Paid To Date.</inlineHelpText>
    <label>Paid To Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>