SubBt/force-app/main/default/objects/Budget__c/fields/Pending_CO__c.field-meta.xml
<CustomField>
    <fullName>Pending_CO__c</fullName>
    <description>Sum of all pending CO</description>
    <inlineHelpText>Rollup of Pending Change Orders.</inlineHelpText>
    <label>Pending CO</label>
    <summarizedField>Budget_Item__c.Pending_CO__c</summarizedField>
    <summaryForeignKey>Budget_Item__c.Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>