SubBt/force-app/main/default/objects/Budget__c/fields/Pending_Cost_Changes__c.field-meta.xml
<CustomField>
    <fullName>Pending_Cost_Changes__c</fullName>
    <description>Pending Cost Changes - Sum of “Pending” Purchase Orders</description>
    <inlineHelpText>Pending Cost Changes - Sum of “Pending” Purchase Orders</inlineHelpText>
    <label>Pending Costs</label>
    <summarizedField>Budget_Item__c.Pending_Cost_Changes__c</summarizedField>
    <summaryForeignKey>Budget_Item__c.Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>