SubBt/force-app/main/default/objects/Budget__c/fields/PO__c.field-meta.xml
<CustomField>
    <fullName>PO__c</fullName>
    <label>PO&apos;s</label>
    <summarizedField>Budget_Item__c.Budget_Modification__c</summarizedField>
    <summaryForeignKey>Budget_Item__c.Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>