SubBt/force-app/main/default/objects/Budget__c/fields/Profit_Loss__c.field-meta.xml
<CustomField>
    <fullName>Profit_Loss__c</fullName>
    <inlineHelpText>Projected Budget - Estimated Cost To Complete</inlineHelpText>
    <label>Over/Under</label>
    <summarizedField>Budget_Item__c.Profit_Loss__c</summarizedField>
    <summaryForeignKey>Budget_Item__c.Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>