SubBt/force-app/main/default/objects/Budget__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is refer to related project</description>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipName>Budgets</relationshipName>
    <type>Lookup</type>
</CustomField>