SubBt/force-app/main/default/objects/Budget__c/fields/Project_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Project_Sales_Price__c</fullName>
    <inlineHelpText>Manually entered Sales Price.</inlineHelpText>
    <label>Sales Price (Manual)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>