SubBt/force-app/main/default/objects/Budget__c/fields/Projected_Budget__c.field-meta.xml
<CustomField>
    <fullName>Projected_Budget__c</fullName>
    <inlineHelpText>Revised Budget + Pending Change Orders</inlineHelpText>
    <label>Projected Budget</label>
    <summarizedField>Budget_Item__c.Projected_Budget__c</summarizedField>
    <summaryForeignKey>Budget_Item__c.Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>