SubBt/force-app/main/default/objects/Budget__c/fields/Projected_Costs__c.field-meta.xml
<CustomField>
    <fullName>Projected_Costs__c</fullName>
    <description>Committed_Costs__c  +  Direct_Costs__c  +  Pending_Cost_Changes__c</description>
    <formula>Committed_Costs__c  +  Direct_Costs__c  +  Pending_Cost_Changes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Projected Costs - (Committed Costs + Direct Costs  +  Pending Cost Changes)</inlineHelpText>
    <label>Projected Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>