SubBt/force-app/main/default/objects/Budget__c/fields/Revenue_Earned_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Earned_To_Date__c</fullName>
    <description>buildertek__Revised_Budget__c * buildertek__Completion_Percent_Budget__c</description>
    <formula>Revised_Budget__c *  Completion_Percent_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Revised Budget * Budget Completion %</inlineHelpText>
    <label>Revenue Earned To Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>