SubBt/force-app/main/default/objects/Budget__c/fields/Revised_Budget__c.field-meta.xml
<CustomField>
    <fullName>Revised_Budget__c</fullName>
    <inlineHelpText>Rollup from Budget Lines = Original Budget + Approved Change Orders.</inlineHelpText>
    <label>Revised Budget</label>
    <summarizedField>Budget_Item__c.Revised_Budget__c</summarizedField>
    <summaryForeignKey>Budget_Item__c.Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>