SubBt/force-app/main/default/objects/Budget__c/fields/Revised_Budgets__c.field-meta.xml
<CustomField>
    <fullName>Revised_Budgets__c</fullName>
    <formula>Approved_CO_Amount__c +  Original_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Approved Change Orders + Original Budget</inlineHelpText>
    <label>Revised Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>