SubBt/force-app/main/default/objects/Budget__c/fields/Total_CO__c.field-meta.xml
<CustomField>
    <fullName>Total_CO__c</fullName>
    <description>Change order amount sum which is related to this budget</description>
    <inlineHelpText>Change order amount sum which is related to this budget</inlineHelpText>
    <label>Total CO</label>
    <summarizedField>Budget_Item__c.Total_CO__c</summarizedField>
    <summaryForeignKey>Budget_Item__c.Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>