SubBt/force-app/main/default/objects/Budget__c/fields/Total_Costs__c.field-meta.xml
<CustomField>
    <fullName>Total_Costs__c</fullName>
    <inlineHelpText>Committed Costs + Direct Costs</inlineHelpText>
    <label>Total Costs</label>
    <summarizedField>Budget_Item__c.Total_Costs__c</summarizedField>
    <summaryForeignKey>Budget_Item__c.Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>