SubBt/force-app/main/default/objects/Budget__c/validationRules/Block_Edit_When_Is_Blocked_Field_Chekced.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_Edit_When_Is_Blocked_Field_Chekced</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  PRIORVALUE( Is_Budget_Locked__c ), NOT($Setup.Budget_Configurations__c.Disable_Validations__c)
)</errorConditionFormula>
    <errorMessage>You Cannot Edit this Record as Budget is Locked</errorMessage>
</ValidationRule>